[project]
name = "loren-ca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James Ashford", email = "ashfordj@rocketmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "mediapy>=1.2.3",
    "numpy>=2.2.5",
    "scipy>=1.15.2",
]

[project.scripts]
loren-ca = "loren_ca:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
